PureFun/PureFunOof/PureFun-fe/src/test/resources/parser/Valid/Simple.pf
module Simple {

    value Int = 31

    fun foo() : Int {
        return value
    }
}