PureFun/PureFunOof/PureFun-fe/src/test/resources/parser/Invalid/Function_no_fun.pf
module DataStructures{

     foo(Int input):Int{
        return input + 2
    }

    mainFun(){

    }
}